--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/lisiur/request-watcher/issues"
   },
-  "homepage": "https://github.com/lisiur/request-watcher#readme"
+  "homepage": "https://github.com/lisiur/request-watcher#readme",
+  "dependencies": {
+    "axios": "^0.17.0",
+    "md5": "^2.2.1",
+    "ramda": "^0.25.0"
+  }
 }
