--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "request-watcher",
   "version": "1.7.5",
   "description": "request-watcher",
-  "main": "index.js",
+  "main": "dist/watcher.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
     "axios": "^0.17.0",
     "md5": "^2.2.1",
     "ramda": "^0.25.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^2.2.1"
   }
 }
