--- a/package.json
+++ b/package.json
@@ -17,17 +17,12 @@
     "url": "https://github.com/request-watcher/request-watcher/issues"
   },
   "homepage": "https://github.com/request-watcher/request-watcher#readme",
-  "dependencies": {
-    "axios": "^0.17.0",
-    "md5": "^2.2.1",
-    "ramda": "^0.25.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   }
 }
